# common

./: .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .golangci.yml  .goreleaser.yaml  .ignore  AGENTS.md  CMakeLists.txt  LICENSE  MIGRATE_PURE_GO.md  Makefile  README.md  cmake_test.go  common.cmake  common.go  deps.go.tools  embed.bash  eslint.config.js  go.mod  go.mod.tools  go.sum  go.sum.tools  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
.github/: renovate.json
.github/workflows/: codeql-analysis.yml  dco.yml  release.yml  tests.yml
.tools/: go.mod  go.sum  tools.go
cmd/aptre/: cmd-generate.go  cmd-generate_test.go  cmd-outdated.go  cmd-release.go  cmd-testing.go  cmd_deps.go  cmd_generate.go  cmd_lint.go  main.go
example/: Cargo.toml  example.pb.cc  example.pb.go  example.pb.h  example.pb.json  example.pb.md  example.pb.rs  example.pb.ts  example.proto  example.test.ts  example_pb.ts  example_srpc.pb.cpp  example_srpc.pb.go  example_srpc.pb.hpp  example_srpc.pb.rs  example_srpc.pb.ts  example_test.go  example_vtproto.pb.go  lib.rs
hack/: go.mod  go.sum  tools.go
patches/: it-pipe+3.0.0.patch  it-ws+5.0.6.patch  starpc+0.15.4.patch  ts-poet+6.5.0.patch  ts-poet+6.6.0.patch  ts-poet+6.8.0.patch  ts-poet+6.8.1.patch  ts-proto+1.126.1.patch  ts-proto+1.135.2.patch  ts-proto+1.135.3.patch  ts-proto+1.149.0.patch
protogen/: cache.go  config.go  config_test.go  discovery.go  generator.go  language.go  plugins.go  plugins_test.go  postprocess.go  postprocess_test.go  rpc.go
tools/: deps.go  go.mod  go.sum
(+11 files in other folders)
